# lgr-live-bootcamp-project

./: Cargo.toml  codebook.toml  compose.yml  docker.sh
.github/workflows/: prod.yml
.zed/: tasks.json
auth-service/: Cargo.toml  Dockerfile
auth-service/.sqlx/: query-ae2b3067c01310ebbda886fe5d42f934149de86f85e065afdb53d295372795cc.json  query-c81e4745ea3a3dc13d3c01cb5de26a90951ad763bf88be340eb84e0ba1f69bd3.json
auth-service/src/: app_state.rs  domain.rs  lib.rs  main.rs  routes.rs  services.rs  utils.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  error.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: data_stores.rs  hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mock_email_client.rs  resend_email_client.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
test_helpers/: Cargo.toml
